this is a second test

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
-<meta name="Keywords" content="宇宙,うちゅう,小・中学生,関東,スクール" />
+<meta name="Keywords" content="バングル,ハンドメイド,handmade" />
 
 <meta http-equiv="X-UA-Compatible" content="IE=10" />
 
