--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 }
 
 p {
-    color: #5d5d5d;
-    font-size: 0.8em;
-    text-shadow: -1px -1px 1px #000000, 1px 1px #ffffff;
+    color: #EAE193;
+    font-size: 10px;
+    text-shadow: -1px -1px 1px #888888, 1px 1px #eeeeee;
 }
 
 </style>
@@ -28,7 +28,7 @@ p {
 </head>
 <body style="margin:0;position:relative;">
 
-<img src="image2.jpg" style="width:600px;" alt="">
+<img src="frank_600.jpeg" style="width:600px;" alt="">
 
 <script type="text/javascript">
   
@@ -54,6 +54,9 @@ setupMessage();
 
 function dispMsg(str,theta,center_x,center_y,r){
 
+  var a = 0.84;
+  var b = 1.05;
+
   document.write("<p");
   document.write(" style=");
 
@@ -66,11 +69,31 @@ function dispMsg(str,theta,center_x,center_y,r){
   document.write(");position:absolute;z-index:2;left:");
 
           //alert(1+Math.cos(r));
-  document.write(center_x+r*(Math.sin(theta/180*Math.PI)));
+
+
+/*
+  document.write(center_x+r*1.03/a*(Math.sin(theta/180*Math.PI)));
   document.write("px;top:");
-  document.write(center_y-r*(Math.cos(theta/ 180 * Math.PI)));
+  document.write(center_y-r*1.03/b*(Math.cos(theta/ 180 * Math.PI)));
+  document.write("px;");
+*/
+
+
+///best method
+// -130, -45, -15, 45, 230, 315 [deg]でGaussianによる補正を入れた楕円で近似
+  document.write(center_x+r*(1+0.03*Math.exp( -Math.pow((theta-45)/20,2) )+0.05*Math.exp( -Math.pow((theta-230)/20,2) )+0.05*Math.exp( -Math.pow((theta+130)/20,2) )+0.01*Math.exp( -Math.pow((theta+15)/20,2) )+0.01*Math.exp( -Math.pow((theta-345)/20,2) )+0.01*Math.exp( -Math.pow((theta+45)/20,2) )+0.01*Math.exp( -Math.pow((theta-315)/20,2) ))/a*(Math.sin(theta/180*Math.PI)));
+  document.write("px;top:");
+  document.write(center_y-r*(1+0.03*Math.exp( -Math.pow((theta-45)/20,2) )+0.05*Math.exp( -Math.pow((theta-230)/20,2) )+0.05*Math.exp( -Math.pow((theta+130)/20,2) )+0.01*Math.exp( -Math.pow((theta+15)/20,2) )+0.01*Math.exp( -Math.pow((theta-345)/20,2) )+0.01*Math.exp( -Math.pow((theta+45)/20,2) )+0.01*Math.exp( -Math.pow((theta-315)/20,2) ))/b*(Math.cos(theta/ 180 * Math.PI)));
   document.write("px;");
 
+
+
+/*
+  document.write(center_x+r/a*(Math.sin(theta/180*Math.PI)));
+  document.write("px;top:");
+  document.write(center_y-r/b*(Math.cos(theta/ 180 * Math.PI)));
+  document.write("px;");
+*/
 
   document.write(">");
 
@@ -87,26 +110,62 @@ function dispMsg(str,theta,center_x,center_y,r){
   // var r = 200;
 
 //image2
-  var center_x = 291;
-  var center_y = 217;
-  var r = 174;
+  var center_x = 298;
+  var center_y = 180;
+  var r = 145;
 
   var theta = -70;
-theta = dispMsg("f",theta,center_x,center_y,r);
-theta = dispMsg("r",theta,center_x,center_y,r);
-theta = dispMsg("a",theta,center_x,center_y,r);
-theta = dispMsg("n",theta,center_x,center_y,r);
-theta = dispMsg("k",theta,center_x,center_y,r);
+theta = dispMsg("F",theta,center_x,center_y,r);
+theta = dispMsg("R",theta,center_x,center_y,r);
+theta = dispMsg("A",theta,center_x,center_y,r);
+theta = dispMsg("N",theta,center_x,center_y,r);
+theta = dispMsg("K",theta,center_x,center_y,r);
 theta = dispMsg(" ",theta,center_x,center_y,r);
-theta = dispMsg("a",theta,center_x,center_y,r);
-theta = dispMsg("n",theta,center_x,center_y,r);
-theta = dispMsg("d",theta,center_x,center_y,r);
+theta = dispMsg("A",theta,center_x,center_y,r);
+theta = dispMsg("N",theta,center_x,center_y,r);
+theta = dispMsg("D",theta,center_x,center_y,r);
 theta = dispMsg(" ",theta,center_x,center_y,r);
-theta = dispMsg("e",theta,center_x,center_y,r);
-theta = dispMsg("a",theta,center_x,center_y,r);
-theta = dispMsg("s",theta,center_x,center_y,r);
-theta = dispMsg("y",theta,center_x,center_y,r);
-
+theta = dispMsg("E",theta,center_x,center_y,r);
+theta = dispMsg("A",theta,center_x,center_y,r);
+theta = dispMsg("S",theta,center_x,center_y,r);
+theta = dispMsg("Y",theta,center_x,center_y,r);
+theta = dispMsg("F",theta,center_x,center_y,r);
+theta = dispMsg("R",theta,center_x,center_y,r);
+theta = dispMsg("A",theta,center_x,center_y,r);
+theta = dispMsg("N",theta,center_x,center_y,r);
+theta = dispMsg("K",theta,center_x,center_y,r);
+theta = dispMsg(" ",theta,center_x,center_y,r);
+theta = dispMsg("A",theta,center_x,center_y,r);
+theta = dispMsg("N",theta,center_x,center_y,r);
+theta = dispMsg("D",theta,center_x,center_y,r);
+theta = dispMsg(" ",theta,center_x,center_y,r);
+theta = dispMsg("E",theta,center_x,center_y,r);
+theta = dispMsg("A",theta,center_x,center_y,r);
+theta = dispMsg("S",theta,center_x,center_y,r);
+theta = dispMsg("Y",theta,center_x,center_y,r);
+theta = dispMsg("F",theta,center_x,center_y,r);
+theta = dispMsg("R",theta,center_x,center_y,r);
+theta = dispMsg("A",theta,center_x,center_y,r);
+theta = dispMsg("N",theta,center_x,center_y,r);
+theta = dispMsg("K",theta,center_x,center_y,r);
+theta = dispMsg(" ",theta,center_x,center_y,r);
+theta = dispMsg("A",theta,center_x,center_y,r);
+theta = dispMsg("N",theta,center_x,center_y,r);
+theta = dispMsg("D",theta,center_x,center_y,r);
+theta = dispMsg(" ",theta,center_x,center_y,r);
+theta = dispMsg("E",theta,center_x,center_y,r);
+theta = dispMsg("A",theta,center_x,center_y,r);
+theta = dispMsg("S",theta,center_x,center_y,r);
+theta = dispMsg("Y",theta,center_x,center_y,r);
+theta = dispMsg("F",theta,center_x,center_y,r);
+theta = dispMsg("R",theta,center_x,center_y,r);
+theta = dispMsg("A",theta,center_x,center_y,r);
+theta = dispMsg("N",theta,center_x,center_y,r);
+theta = dispMsg("K",theta,center_x,center_y,r);
+theta = dispMsg(" ",theta,center_x,center_y,r);
+theta = dispMsg("A",theta,center_x,center_y,r);
+theta = dispMsg("N",theta,center_x,center_y,r);
+theta = dispMsg("D",theta,center_x,center_y,r);
 
 
 
